implemented trouble checker and killer

--- a/todo
+++ b/todo
@@ -1,7 +1,11 @@
-airmon-ng check kill 
-ctrl+c abbruch
-implement mobile version
 
 
 infos:
 from chipset until end 21 
+
+
+Done:
+
+airmon-ng check kill 
+ctrl+c abbruch
+implement mobile version
