--- a/todo
+++ b/todo
@@ -1,4 +1,5 @@
-
+row in header on in mobile version one too much
+error handling if cant set in monitormode or no monitormode available after setting
 
 infos:
 from chipset until end 21 
