--- a/todo
+++ b/todo
@@ -1,5 +1,21 @@
 
 
+TODO:
+row in header on in mobile version one too much
+error handling if cant set in monitormode or no monitormode available after setting
+expand base menu for target router
+4. read 2,4ghz and 5,ghz
+    - iwlist {interface} freq
+
+5.Deauther 
+- Scan networks
+- AttacK Chosen network
+
+
+
+
+
+
 infos:
 from chipset until end 21 
 
